<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <artifactId>simple-cache</artifactId>
    <packaging>jar</packaging>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <parent>
        <groupId>no.lau.vdvil</groupId>
        <artifactId>vdvil</artifactId>
        <version>0.17.0-SNAPSHOT</version>
    </parent>
    
    <name>Vdvil Cache: Simple file cache for downloading files from teh web</name>

    <dependencies>
        <dependency>
            <groupId>commons-codec</groupId>
            <artifactId>commons-codec</artifactId>
        </dependency>
        <dependency>
            <groupId>no.lau.vdvil</groupId>
            <artifactId>common-utils</artifactId>
        </dependency>
        <dependency>
            <groupId>no.lau.vdvil</groupId>
            <artifactId>common-test</artifactId>
        </dependency>
    </dependencies>
</project>
